Cleanup the dependencies